--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -37,7 +37,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <h4><span th:utext="${userProfile}">User-Profile</span></h4>
-                <span>---------------------</span>
+                <span>&nbsp;</span>
                 <div style="float:right;">
                     <form th:action="@{/user/edit-user-profile}" method="get">
                         <button class="button2" name="user-profile"
