--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -77,7 +77,7 @@
 							</td>
 							<td>
 								<a th:href="@{/admin/delete/{id}(id=${user.id})}"
-								   class="btn btn-danger">
+								   class="btn btn-danger" onclick="return confirm('Are you sure you want to Delete this user?');">
 									<i class="fas fa-user-times ml-2"></i>
 								</a>
 							</td>
