--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -30,7 +30,7 @@
 	</div>
 </nav>
 	<div class="container">
-		<div class="panel-group" style="margin-top:40px">
+		<div class="panel-group" style="margin-top:25px">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h4><span th:utext="${userManagement}">User-Management</span></h4>
@@ -62,7 +62,7 @@
 						<tr th:each="user: ${users}">
 							<td th:text="${user.id}">1</td>
 							<td th:text="${user.firstName}">Test</td>
-							<td th:text="${user.lastName}">Class</td>
+							<td th:text="${user.lastName}">Class45234623654763476735</td>
 							<td th:text="${user.gender}">male</td>
 							<td th:text="${user.email}">test@example.com</td>
 							<td th:text="${user.mobileNo}">123456789</td>
