--- a/src/main/resources/templates/change-requests.html
+++ b/src/main/resources/templates/change-requests.html
@@ -33,7 +33,7 @@
     </div>
 </nav>
 <div class="container">
-    <div class="panel-group" style="margin-top:20px; margin-left:40px; margin-right:40px;">
+    <div class="panel-group" style="margin-top:25px">
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <h4><span>Change Requests</span></h4>
