--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -66,6 +66,21 @@
                         <td> </td>
                     </tr>
                     <tr>
+                        <th>Mobile No</th>
+                        <td th:text="${user.mobileNo}">123456789</td>
+                        <td> </td>
+                    </tr>
+                    <tr th:if="${role} == 'USER'">
+                        <th>Team Leader</th>
+                        <td><span th:text="${user.parent.firstName}"></span>&nbsp;<span th:text="${user.parent.lastName}"></span></td>
+                        <td> </td>
+                    </tr>
+                    <tr th:if="${role} == 'TL'">
+                        <th>Project Manager</th>
+                        <td><span th:text="${user.parent.firstName}"></span>&nbsp;<span th:text="${user.parent.lastName}"></span></td>
+                        <td> </td>
+                    </tr>
+                    <tr>
                         <th>Email</th>
                         <td th:text="${user.email}">test@example.com</td>
                         <td>
@@ -74,11 +89,6 @@
                                         type="Submit">Change Email Id</button>
                             </form>
                         </td>
-                    </tr>
-                    <tr>
-                        <th>Mobile No</th>
-                        <td th:text="${user.mobileNo}">123456789</td>
-                        <td> </td>
                     </tr>
                     <tr>
                         <th>Department</th>
