--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -54,8 +54,8 @@
             </form>
         </div>
         <div>
-            <p th:text="${successMessage}"></p>
-            <p th:text="${errorMessage}"></p>
+            <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
+            <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
         </div>
     </div>
     <div class ="col-sm-4"></div>
