--- a/src/main/resources/templates/change-requests.html
+++ b/src/main/resources/templates/change-requests.html
@@ -75,8 +75,10 @@
                     </tr>
                     </tbody>
                 </table>
-                    <p style="color:#FF1C19;" th:text="${errorMessage}"></p>
-                    <p style="color:#00BF6F;" th:text="${successMessage}"></p>
+                <div>
+                    <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
+                    <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
+                </div>
             </div>
         </div>
     </div>
