fixed Navigation bar for all tempates.

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,8 +18,14 @@
 			<a th:if="${role} == 'ADMIN'" class="navbar-brand" href="/admin/user-management/1"><i class="fas fa-chevron-circle-left"></i></a>
 			<a class="navbar-brand" href="#">Book A MeetingRoom</a>
 		</div>
-		<ul class="nav navbar-nav" th:if="${role} == 'ADMIN'">
-			<li class="active"><a href="/admin/user-management/1">Users</a></li>
+		<ul th:if="${role} == 'ADMIN'" class="nav navbar-nav">
+			<li class="dropdownNav active">
+				<a href="/admin/user-management/1">Users</a>
+				<div class="dropdownNav-content">
+					<a class="btn btn-default" href="/change-requests">Change Requests</a>
+					<a class="btn btn-default" href="#">Assign Roles</a>
+				</div>
+			</li>
 			<li><a href="/meeting-room-details/1">Rooms</a></li>
 			<li><a href="/admin/booking-requests/1">Bookings</a></li>
 		</ul>
