--- a/src/main/resources/templates/admin/add-room.html
+++ b/src/main/resources/templates/admin/add-room.html
@@ -19,10 +19,15 @@
             <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="/admin/user-management/1">Users</a></li>
+            <li class="dropdownNav">
+                <a href="/admin/user-management/1">Users</a>
+                <div class="dropdownNav-content">
+                    <a class="btn btn-default" href="/change-requests">Change Requests</a>
+                    <a class="btn btn-default" href="#">Assign Roles</a>
+                </div>
+            </li>
             <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>
             <li><a href="/admin/booking-requests/1">Bookings</a></li>
-            <li><a href="/change-requests">Change Requests</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
