--- a/src/main/resources/templates/admin/update.html
+++ b/src/main/resources/templates/admin/update.html
@@ -16,15 +16,19 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="/admin/user-management/1">
-                <i class="fas fa-chevron-circle-left"></i>
-            </a>
+                <i class="fas fa-chevron-circle-left"></i></a>
             <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/admin/user-management/1">Users</a></li>
+            <li class="dropdownNav active">
+                <a href="/admin/user-management/1">Users</a>
+                <div class="dropdownNav-content">
+                    <a class="btn btn-default" href="/change-requests">Change Requests</a>
+                    <a class="btn btn-default" href="#">Assign Roles</a>
+                </div>
+            </li>
             <li><a href="/meeting-room-details/1">Rooms</a></li>
             <li><a href="/admin/booking-requests/1">Bookings</a></li>
-            <li><a href="/change-requests">Change Requests</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
