--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -10,7 +10,6 @@
 <script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
 <body>
 <nav class="navbar navbar-inverse">
 	<div class="container-fluid">
@@ -19,17 +18,22 @@
 			<a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
 		</div>
 		<ul class="nav navbar-nav">
-			<li class="active"><a href="/admin/user-management/1">Users</a></li>
+			<li class="dropdownNav active">
+				<a href="/admin/user-management/1">Users</a>
+				<div class="dropdownNav-content">
+					<a class="btn btn-default" href="/change-requests">Change Requests</a>
+					<a class="btn btn-default" href="#">Assign Roles</a>
+				</div>
+			</li>
 			<li><a href="/meeting-room-details/1">Rooms</a></li>
 			<li><a href="/admin/booking-requests/1">Bookings</a></li>
-			<li><a href="/change-requests">Change Requests</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
 		</ul>
 	</div>
 </nav>
-	<div class="container">
+<div class="container">
 		<div class="panel-group" style="margin:25px 0px 25px;">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
