--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -19,6 +19,22 @@
             <a class="navbar-brand" th:if="${temp} == 1" th:href="@{/user/user-profile}"><i class="fas fa-chevron-circle-left"></i></a>
             <a class="navbar-brand active" href="#">Book A MeetingRoom</a>
         </div>
+        <ul class="nav navbar-nav" th:if="${temp} == 1">
+            <li class="dropdownNav active">
+                <a href="/user/user-profile">My Profile</a>
+                <div class="dropdownNav-content">
+                    <a class="btn btn-default" href="/user/profile-change-requests">My Change Request Status</a>
+                    <a th:if="${role} == 'TL' or ${role} == 'PM'" class="btn btn-default" href="/change-requests">User Requests</a>
+                </div>
+            </li>
+            <li><a href="/meeting-room-details/1">Rooms</a></li>
+            <li class="dropdownNav">
+                <a href="/user/booking-status/1">Bookings</a>
+                <div class="dropdownNav-content">
+                    <a class="btn btn-default" href="/booking-history">Booking History</a>
+                </div>
+            </li>
+        </ul>
         <ul class="nav navbar-nav navbar-right" th:if="${temp} == null">
             <li><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
