--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -17,10 +17,27 @@
             <a class="navbar-brand active" href="#">Book A MeetingRoom</a>
         </div>
         <ul class="nav navbar-nav">
-            <li th:if="${role} == 'ADMIN'"><a href="/admin/user-management/1">Users</a></li>
-            <li th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'"><a href="/user/user-profile">User Profile</a></li>
+            <li th:if="${role} == 'ADMIN'" class="dropdownNav">
+                <a href="/admin/user-management/1">Users</a>
+                <div class="dropdownNav-content">
+                    <a class="btn btn-default" href="/change-requests">Change Requests</a>
+                    <a class="btn btn-default" href="#">Assign Roles</a>
+                </div>
+            </li>
+            <li th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'" class="dropdownNav">
+                <a href="/user/user-profile">My Profile</a>
+                <div class="dropdownNav-content">
+                    <a class="btn btn-default" href="/user/profile-change-requests">My Change Request Status</a>
+                    <a th:if="${role} == 'TL' or ${role} == 'PM'" class="btn btn-default" href="/change-requests">User Requests</a>
+                </div>
+            </li>
             <li><a href="/meeting-room-details/1">Rooms</a></li>
-            <li th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'"><a href="/user/booking-status/1">Bookings</a></li>
+            <li th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'" class="dropdownNav">
+                <a href="/user/booking-status/1">Bookings</a>
+                <div class="dropdownNav-content">
+                    <a class="btn btn-default" href="/booking-history">Booking History</a>
+                </div>
+            </li>
             <li th:if="${role} == 'ADMIN'"><a href="/admin/booking-requests/1">Bookings</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
