Fixed My-Profile for users. closes #34

--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -80,12 +80,14 @@
                     </tr>
                     <tr th:if="${role} == 'USER'">
                         <th>Team Leader</th>
-                        <td><span th:text="${user.parent.firstName}"></span>&nbsp;<span th:text="${user.parent.lastName}"></span></td>
+                        <td th:if="${user.parent} == null"><span>Not Assigned.</span></td>
+                        <td th:if="${user.parent} != null"><span th:text="${user.parent.firstName}"></span>&nbsp;<span th:text="${user.parent.lastName}"></span></td>
                         <td> </td>
                     </tr>
                     <tr th:if="${role} == 'TL'">
                         <th>Project Manager</th>
-                        <td><span th:text="${user.parent.firstName}"></span>&nbsp;<span th:text="${user.parent.lastName}"></span></td>
+                        <td th:if="${user.parent} == null"><span>Not Assigned.</span></td>
+                        <td th:if="${user.parent} != null"><span th:text="${user.parent.firstName}"></span>&nbsp;<span th:text="${user.parent.lastName}"></span></td>
                         <td> </td>
                     </tr>
                     <tr>
