--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -61,6 +61,7 @@
 							class="validation-message"></label>
 					</div>
 				</div>
+
 				<div class="form-group" >
 					<label>Gender:</label> &nbsp &nbsp
 					<label class="radio-inline">
@@ -79,6 +80,10 @@
 							   class="form-control" required/>
 					</div>
 				</div>
+				<div align="center" th:if="${param.error}">
+					<p style="font-size: 20; color: #FF1C19;">*Please enter valid mobile number</p>
+				</div>
+
 				<div class="form-group">
 						<label>Select Department:</label>
 						<select class="form-control" name="department">
