--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -92,8 +92,8 @@
 
 				<div class="form-group">
 						<label>Select Department:</label>
-						<select class="form-control" name="department">
-							<option value="Null" disabled selected>Select</option>
+						<select required class="form-control" name="department">
+							<option value="" disabled selected>Select</option>
 							<option value="1">Java</option>
 							<option value="2">Android</option>
 							<option value="3">IOS</option>
