Implemented AddFacility UI and made some minorChanges.

--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -34,7 +34,7 @@
 	</div>
 </nav>
 <div class="container">
-		<div class="panel-group" style="margin:25px 0px 25px;">
+		<div class="panel-group" style="margin-top:25px">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h4><span th:utext="${userManagement}">User-Management</span></h4>
