--- a/src/main/resources/templates/admin/add-room.html
+++ b/src/main/resources/templates/admin/add-room.html
@@ -68,7 +68,7 @@
             </div>
             <div class="form-group">
                 <div>
-                    <span><button class="button1" type="submit" >Add</button></span>
+                    <span><button class="button1" type="submit" >Submit</button></span>
                     <span><button class="button1" type="reset" value="reset">Clear</button></span>
                 </div>
             </div>
