Displayed No Records found messages to all the tables if table is empty.

--- a/src/main/resources/templates/admin/booking-requests.html
+++ b/src/main/resources/templates/admin/booking-requests.html
@@ -61,6 +61,7 @@
                     </tr>
                     </thead>
                     <tbody>
+                    <tr th:if="${noRecords}"><td colspan="7"><p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${noRecords}">no records</p></td></tr>
                     <tr th:each="booking: ${bookingDetails}">
                         <td th:text="${booking.id}">1</td>
                         <td th:text="${booking.MeetingRoom.name}">Test</td>
