Major bug fixes. (/template Resolver).

--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -52,7 +52,7 @@
             <div class="panel-body">
                 <form th:action="@{/forgot-password}" method="post">
                     <div class="form-group">
-                        <input type="text" name="email" class="form-control" id="email" placeholder="Enter Email Id"/>
+                        <input type="email" name="email" class="form-control" id="email" placeholder="Enter Email Id" required/>
                     </div>
                     <div>
                         <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
