--- a/src/main/resources/templates/meeting-room-details.html
+++ b/src/main/resources/templates/meeting-room-details.html
@@ -83,8 +83,7 @@
                     </table>
                 </form>
                 <div>
-                    <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
-                    <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
+                    <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorDate}"></p>
                 </div>
                 <hr>
             </div>
