--- a/src/main/resources/templates/admin/update.html
+++ b/src/main/resources/templates/admin/update.html
@@ -56,7 +56,7 @@
             </div>
             <div class="form-group">
                 <div>
-                    <input type="text" th:field="*{email}" placeholder="Email"
+                    <input type="email" th:field="*{email}" placeholder="Email"
                            class="form-control" />
                 </div>
             </div>
