--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
         <form th:action="@{/login}" method="post">
             <div class="form-group">
                 <label>Email Id:</label>
-                <input type="text" name="email" class="form-control" id="email" />
+                <input type="email" name="email" class="form-control" id="email" />
             </div>
             <div class="form-group">
                 <label>Password:</label>
