--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -55,7 +55,7 @@
 				</div>
 				<div class="form-group">
 					<div>
-						<input type="text" th:field="*{email}" placeholder="Email"
+						<input type="email" th:field="*{email}" placeholder="Email"
 							class="form-control" required/>
 					</div>
 				</div>
