--- a/src/main/resources/templates/user/change-request.html
+++ b/src/main/resources/templates/user/change-request.html
@@ -53,7 +53,7 @@
                         <label>Old Email Id: <span th:text="${previousEmail}"></span></label>
                     </div>
                     <div class="form-group">
-                        <input type="text" name="email" class="form-control"
+                        <input type="email" name="email" class="form-control"
                                 id="email" placeholder="Enter new email id" required/>
                     </div>
                     <div>
