--- a/src/main/resources/templates/admin/add-room.html
+++ b/src/main/resources/templates/admin/add-room.html
@@ -23,7 +23,7 @@
                 <a href="/admin/user-management/1">Users</a>
                 <div class="dropdownNav-content">
                     <a class="btn btn-default" href="/change-requests">Change Requests</a>
-                    <a class="btn btn-default" href="#">Assign Roles</a>
+                    <a class="btn btn-default" href="/admin/assign-users">Assign Users</a>
                 </div>
             </li>
             <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>
