Fixed Assigned Role Section but Save function not working.

--- a/src/main/resources/templates/admin/add-room.html
+++ b/src/main/resources/templates/admin/add-room.html
@@ -57,7 +57,7 @@
                 <div>
                     <label>Select Facilities:</label><br>
                     <table>
-                        <tr th:each="facility : ${facilities}">
+                        <tr th:each="facility : ${facilities}" th:field="*{facilities}">
                             <td>
                                 <input type="checkbox" name="facilities" th:value="${facility.id}" />
                                 <label th:text="${facility.facility}"></label>
