--- a/src/main/resources/templates/admin/assign-users.html
+++ b/src/main/resources/templates/admin/assign-users.html
@@ -65,8 +65,10 @@
                             <td th:text="${user.Department.name}">testdept</td>
                             <td>
                                 <div>
-                                    <select class="form-control" name="parent_id" th:each="parent: ${parents}">
-                                        <option th:value="${parent.id}">
+                                    <select required class="form-control" name="parent_id" >
+                                        <option th:each="parent: ${parents}"
+                                                th:if="${user.Department.name} == ${parent.Department.name}"
+                                                th:value="${parent.id}">
                                             <span th:text="${parent.firstName}">fname</span>&nbsp;
                                             <span th:text="${parent.lastName}">lname</span>&nbsp;
                                             (&nbsp;<span th:text="${parent.Department.name}">IT</span>&nbsp;)
@@ -76,8 +78,7 @@
                             </td>
                             <td>
                                 <a th:href="@{/admin/assign-users/{id}(id=${user.id})}"
-                                   class="btn btn-primary">Save
-                                </a>
+                                   class="btn btn-primary">Save</a>
                             </td>
                         </tr>
                         </tbody>
