--- a/src/main/resources/templates/admin/assign-users.html
+++ b/src/main/resources/templates/admin/assign-users.html
@@ -51,8 +51,8 @@
                             <th>ID</th>
                             <th>Name</th>
                             <th>Department</th>
-                            <th>Assigned To</th>
-                            <th>Operations</th>
+                            <th colspan="2">Assign</th>
+
                         </tr>
                         </thead>
                         <tbody>
@@ -63,23 +63,40 @@
                                 <span th:text="${user.lastName}">lname</span>
                             </td>
                             <td th:text="${user.Department.name}">testdept</td>
-                            <td>
-                                <div>
-                                    <select required class="form-control" name="parent_id" >
-                                        <option th:each="parent: ${parents}"
-                                                th:if="${user.Department.name} == ${parent.Department.name}"
-                                                th:value="${parent.id}">
-                                            <span th:text="${parent.firstName}">fname</span>&nbsp;
-                                            <span th:text="${parent.lastName}">lname</span>&nbsp;
-                                            (&nbsp;<span th:text="${parent.Department.name}">IT</span>&nbsp;)
-                                        </option>
-                                    </select>
-                                </div>
-                            </td>
-                            <td>
-                                <a th:href="@{/admin/assign-users/{id}(id=${user.id})}"
-                                   class="btn btn-primary">Save</a>
-                            </td>
+                            <form th:if="${temp} == 1" th:action="@{/admin/assign-users/{id}(id=${user.id})}" method="post">
+                                <td>
+                                    <div>
+                                        <select required class="form-control" name="parent_id" >
+                                            <option th:each="parent: ${parents}"
+                                                    th:if="${user.Department.name} == ${parent.Department.name}"
+                                                    th:value="${parent.id}">
+                                                <span th:text="${parent.firstName}">fname</span>&nbsp;
+                                                <span th:text="${parent.lastName}">lname</span>&nbsp;
+                                                (&nbsp;<span th:text="${parent.Department.name}">IT</span>&nbsp;)
+                                            </option>
+                                        </select>
+                                    </div>
+                                </td>
+                                <td>
+                                    <button type="submit" class="btn btn-primary">Assign</button>
+                                </td>
+                            </form>
+                            <form th:unless="${temp} == 1" th:action="@{/admin/assign-users/{id}(id=${user.id})}" method="post">
+                                <td>
+                                    <div>
+                                        <select required class="form-control" name="parent_id" >
+                                            <option th:each="parent: ${parents}" th:value="${parent.id}">
+                                                <span th:text="${parent.firstName}">fname</span>&nbsp;
+                                                <span th:text="${parent.lastName}">lname</span>&nbsp;
+                                                (&nbsp;<span th:text="${parent.Department.name}">IT</span>&nbsp;)
+                                            </option>
+                                        </select>
+                                    </div>
+                                </td>
+                                <td>
+                                    <button type="submit" class="btn btn-primary">Assign</button>
+                                </td>
+                            </form>
                         </tr>
                         </tbody>
                     </table>
