--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -34,6 +34,7 @@
                     <a class="btn btn-default" href="/booking-history">Booking History</a>
                 </div>
             </li>
+            <li><a href="/user/feedback">Feedback</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" th:if="${temp} == null">
             <li><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
