--- a/src/main/resources/templates/admin/add-room.html
+++ b/src/main/resources/templates/admin/add-room.html
@@ -28,6 +28,7 @@
             </li>
             <li class="active"><a href="/meeting-room-details/1">Rooms</a></li>
             <li><a href="/admin/booking-requests/1">Bookings</a></li>
+            <li><a href="/admin/feedback">Feedback</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
