--- a/src/main/resources/templates/admin/feedback.html
+++ b/src/main/resources/templates/admin/feedback.html
@@ -18,7 +18,7 @@
             <a class="navbar-brand" href="/homepage">Book A MeetingRoom</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="dropdownNav active">
+            <li class="dropdownNav">
                 <a href="/admin/user-management/1">Users</a>
                 <div class="dropdownNav-content">
                     <a class="btn btn-default" href="/change-requests">Change Requests</a>
@@ -27,7 +27,7 @@
             </li>
             <li><a href="/meeting-room-details/1">Rooms</a></li>
             <li><a href="/admin/booking-requests/1">Bookings</a></li>
-            <li th:if="${role} == 'ADMIN'"><a href="/admin/feedback">Feedback</a></li>
+            <li class="active"><a href="/admin/feedback">Feedback</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
@@ -62,7 +62,8 @@
                             <td th:text="${feedback.content}">content</td>
                             <td>
                                 <form th:href="@{/admin/emailFeedback/{id}(id=${feedback.id})}">
-                                    <textarea rows="4" cols="30" class="form-control" name="email-content"></textarea>
+                                    <textarea rows="4" cols="30" class="form-control" name="email-content"
+                                              placeholder="Enter your response here..." required></textarea>
                                     <td><input class="btn btn-primary" type="submit" value="Send Reply"></td>
                                 </form>
                             </td>
