--- a/src/main/resources/templates/user/change-request.html
+++ b/src/main/resources/templates/user/change-request.html
@@ -35,6 +35,7 @@
                     <a class="btn btn-default" href="/booking-history">Booking History</a>
                 </div>
             </li>
+            <li><a href="/user/feedback">Feedback</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
