--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -33,9 +33,9 @@
                     <div class="form-group">
                         <input type="password" name="password" class="form-control" id="password" placeholder="Enter new password" required/>
                     </div>
-                    <!--<div class="form-group">
+                    <div class="form-group">
                         <input type="password" name="ConfirmPassword" class="form-control" id="ConfirmPassword" placeholder="Confirm password" />
-                    </div>-->
+                    </div>
                     <div>
                         <p class="text-center" style="font-size: 20; color:#00BF6F;" th:utext="${successMessage}"></p>
                         <p class="text-center" style="font-size: 20; color:#FF1C19;" th:utext="${errorMessage}"></p>
@@ -47,10 +47,6 @@
                 </form>
             </div>
         </div>
-    </div>
-    <div>
-        <p th:text="${successMessage}"></p>
-        <p th:text="${errorMessage}"></p>
     </div>
 </div>
 </body>
